upgrade bootstrap from 4.2.1 to 4.3.1

--- a/example/index.html
+++ b/example/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
 <div class="container">
-    <div>
-        <button className="btn btn-primary">Primary</button>
+    <div class="mb-2">
+        <button class="btn btn-primary">Primary</button>
     </div>
     <div>
-        <button className="btn btn-info">Information</button>
+        <button class="btn btn-info">Information</button>
     </div>
 </div>
 </body>
